--- a/app/src/main/res/layout/fragment_sample.xml
+++ b/app/src/main/res/layout/fragment_sample.xml
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        style="@style/Base.TextAppearance.AppCompat.Large"
+        android:textSize="20sp"
         android:layout_centerInParent="true" />
 
 </RelativeLayout>
