--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.komi.slider.Slider xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:slider="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    slider:position="horizontal"
+    slider:edgeOnly="true"
     tools:context="com.komi.sliderdemo.AdapterActivity">
 
     <Button
@@ -11,4 +14,12 @@
         android:layout_height="wrap_content"
         android:text="become a slider"/>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="280dip"
+        android:layout_height="400dip"
+        android:background="@color/light_blue_500"
+        android:layout_gravity="bottom|right"
+        ></LinearLayout>
+    <!--android:layout_marginLeft="-100dip"-->
+
+</com.komi.slider.Slider>
