--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -4,8 +4,8 @@
     xmlns:slider="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    slider:position="horizontal"
-    slider:edgeOnly="true"
+    slider:position="all"
+    slider:edgeOnly="false"
     tools:context="com.komi.sliderdemo.AdapterActivity">
 
     <Button
@@ -18,7 +18,7 @@
         android:layout_width="280dip"
         android:layout_height="400dip"
         android:background="@color/light_blue_500"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="center"
         ></LinearLayout>
     <!--android:layout_marginLeft="-100dip"-->
 
