--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -2,25 +2,21 @@
 <com.komi.slider.Slider xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:slider="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/slider_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     slider:position="all"
     slider:edgeOnly="false"
-    tools:context="com.komi.sliderdemo.AdapterActivity">
+    tools:context=".XmlActivity">
 
-    <Button
-        android:id="@+id/slider_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/xml_fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--android:src="@android:drawable/ic_menu_add" />-->
 
-        android:text="become a slider"/>
 
-    <LinearLayout
-        android:layout_width="280dip"
-        android:layout_height="400dip"
-        android:background="@color/light_blue_500"
-        android:layout_gravity="center"
-        ></LinearLayout>
-    <!--android:layout_marginLeft="-100dip"-->
 
 </com.komi.slider.Slider>
