--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -5,7 +5,7 @@
     android:id="@+id/slider_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    slider:position="all"
+    slider:position="left"
     slider:edgeOnly="false"
     tools:context=".XmlActivity">
 
