View模式加入完成，增加demo实例

--- a/app/src/main/res/layout/fragment_adapter.xml
+++ b/app/src/main/res/layout/fragment_adapter.xml
@@ -6,5 +6,11 @@
     tools:context="com.komi.sliderdemo.AdapterFragment">
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/stay_tuned"
+        android:textSize="23sp" />
 
 </FrameLayout>
