--- a/app/src/main/res/layout/fragment_listview_link.xml
+++ b/app/src/main/res/layout/fragment_listview_link.xml
@@ -2,7 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_blue_500">
+    android:background="@android:color/white">
 
+    <ListView
+        android:id="@+id/extends_fragment_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
