--- a/app/src/main/res/menu/menu_xml.xml
+++ b/app/src/main/res/menu/menu_xml.xml
@@ -3,22 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
-    <item android:id="@+id/menu_add"
-        android:title=""
-        android:orderInCategory="10"
+    <item
+        android:id="@+id/menu_xml_add"
         android:icon="@android:drawable/ic_menu_add"
-        app:showAsAction="ifRoom" />
-
-    <item android:id="@+id/menu_del"
+        android:orderInCategory="100"
         android:title=""
-        android:orderInCategory="9"
-        android:icon="@android:drawable/ic_menu_delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
-    <item android:id="@+id/menu_more"
-        android:title=""
-        android:orderInCategory="8"
-        android:icon="@android:drawable/ic_menu_more"
-        app:showAsAction="ifRoom" />
 </menu>
