--- a/app/src/main/res/layout/fragment_adapter.xml
+++ b/app/src/main/res/layout/fragment_adapter.xml
@@ -7,6 +7,7 @@
 
 
     <TextView
+        android:id="@+id/adapter_fragment_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
