--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,12 @@
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:scaleType">centerCrop</item>
         </style>
+
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowBackground">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="colorPrimaryDark">@color/dialogTopColor</item>
+
+    </style>
 </resources>
