--- a/app/src/main/res/layout/activity_custom.xml
+++ b/app/src/main/res/layout/activity_custom.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.komi.slider.Slider xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:slider="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/custom_slider_layout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    slider:position="left"
-    slider:edgeOnly="false"
-    tools:context=".CustomActivity">
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/custom_toolbar"
+        android:background="@color/light_blue_500"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize" />
 
 
+    <com.komi.slider.Slider
+        android:id="@+id/custom_slider_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        slider:edgeOnly="false"
+        slider:position="left"
+        tools:context=".CustomActivity">
 
 
-
-</com.komi.slider.Slider>
+    </com.komi.slider.Slider>
+</LinearLayout>
